# mstatspop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build-debug.sh  build.sh  compile_mstatspop.macos.sh  compile_mstatspop.sh  list_calculations_mstatspop_legend.rtf  mstatspop_help.txt  report.md  run_examples_mstatspop.sh  run_examples_mstatspop_valgrind.sh  seedms
.github/workflows/: cmake-multi-platform.yml
Example_rSFS_Calculate_Thetas_with_R/: GCF_000003025.6_Sscrofa11.1_MICROBIOTE_BILEACID_GENES_chromosome18.txt  Results_RDiversity_MICROBIOTE_BILEACID_genes_RThetaFuli.txt  Results_RDiversity_MICROBIOTE_BILEACID_genes_RThetaTaji.txt  Results_RDiversity_MICROBIOTE_BILEACID_genes_RThetaWatt.txt  SFSline_diversity_example.R  chr18.DUROC_100.results_mstatspop_o92_MICROBIOTE_BILEACID_genes.txt
Examples/: 100Kallchr.gtf  100Kallchr.tfa.gz.tbi  100Kallchr.tfa.index  100Kallchr07.tfa.gz_npops2_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.gz.tbi  100Kchr10.gtf  100Kchr10.tfa.gz.tbi  100Kchr10_criteria_max.gff  100Kchr10_fa2tfa_08.tfa.gz_npops2_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.gz.tbi  100Kchr10_simulation.ms.txt  100Kchr10_tfa2ms_07.ms.txt  100Kchr10_tfa2tfa_03c.tfa.gz_npops3_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.gz.tbi  MC1R.txt  MC1R_H0frq.txt  MC1R_PigsOutg_NSyn_Opttest_H0.txt  MC1R_criteria_long.gff  PFcallersim.ALN.replicate18.2.00000000000000000000.ALN  PFcallersim.ALN.replicate18.2.00000000000000000000.ALN.mstatspop.results.txt  chr10-12-14.txt  chr10-12.txt  chr10.txt  coord_100Kb.txt  coord_100Kb_allchr.txt  mstatspop_100chr10.tfa.15_COLUMNS.txt  seedms
Examples/V0.1.0/: 100Kallchr07.tfa.gz_npops2_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.index  100Kchr10.tfa.index  100Kchr10_tfa2tfa_03c.tfa.gz_npops3_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.index
Examples/V1.0.0/: 100Kallchr07.tfa.gz_npops2_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.gz.tfa.gz.tbi  100Kchr10.tfa.gz.tbi  100Kchr10_tfa2tfa_03c.tfa.gz_npops3_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.gz.tfa.gz.tbi
Examples/tfa_merge/: example_1.tfa.gz.tbi  pileup_1.tfa.bgz  pileup_1.tfa.bgz.tbi
docs/: list_calculations_mstatspop_legend.md  list_calculations_mstatspop_legend.rtf  tfa_merge.md
examples/: 100Kchr10.gtf  100Kchr10_fa2ms_15.ms.txt_npops3_nsam84_nonsynonymous_max_ExcludeMissingmhits_outg_ploidy2_WEIGHTS.txt  100Kchr10_fa2tfa_08.tfa_npops2_nsam42_nonsynonymous_max_IncludeMissingVariantsmhits_outg_ploidy1_WEIGHTS.txt  100Kchr10_tfa2ms_02.ms.txt  100Kchr10_tfa2ms_03.ms.txt  100Kchr10_tfa2ms_06.ms.txt  100Kchr10_tfa2ms_07.ms.txt  10bpchr10.tfa  MC1R.gff  MC1R_H1frq.txt  MC1R_PigsOutg_aligned.fas  required_columns1.txt
lib/: log.c  log.h  zutil.c  zutil.h
mstatspop/: calcFs.c  calcFs.h  calcR2.c  calcR2.h  calc_Toptimal_tests.c  calc_Toptimal_tests.h  common.h  files_util.c  files_util.h  freq_stats.c  freq_stats.h  fstcalc.c  get_msdata.c  get_msdata.h  get_obsdata.c  get_obsdata.h  get_obsdatastats.c  get_obsdatastats.h  get_tfadata.c  get_tfadata.h  jointfreqdist.c  jointfreqdist.h  missing_freqs.c  missing_freqs.h  mstatspop.c  mstatspop.h  optimal-RinfR0.c  permute.h  print_output.c  print_output.h  ran1.h  rfreq_stats.c  rfreq_stats.h  tfa_index.c  tfa_merge.c  tfasta.c  tfasta.h  tn93.h  usegff.c  usegff.h  (+2 more)
scripts/: convert.sh
sources/: .cproject  .project  calcFs.c  calcR2.c  calcR2.h  calc_Toptimal_tests.c  common.h  freq_stats.c  fstcalc.c  fstcalc.h  get_msdata.c  get_msdata.h  get_obsdata.c  get_obsdata.h  get_obsdatastats.c  get_obsdatastats.h  get_tfadata.c  get_tfadata.h  jointfreqdist.c  jointfreqdist.h  makefile  mismatch.c  mismatch.h  missing_freqs.c  mstatspop.c  mstatspop.h  optimal-RinfR0.h  permute.c  print_output.c  print_output.h  ran1.c  ran1.h  sancestral.c  sancestral.h  tn93.c  usegff.c  usegff.h  util.c  zindex.c  zindex.h  (+2 more)
tests/: README.md  README2.md  base.tests.bats  mstatspop.tests.bats
